<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">com.masterkeyboard.emoji</string>
    <string name="app_package_name">com.masterkeyboard.emoji</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_idle">Emoji Keyboard</string>
    <string name="alert_attention_title">Attention !</string>
    <string name="alert_attention_messenger">When you enable Emoji Keyboard, you will receive a warning that says the keyboard may collect your personal data. This is a standard Android warning for any third party keyboard. We PROMISE Emoji Keyboard  will NEVER collect any of your private data! </string>
    <string name="toast_enable_keyboard">Enable Emoji Keyboard</string>
    <string name="toast_select_keyboard">Select Emoji Keyboard</string>
    <string name="main_activity_edittext_hint">Try typing here now...</string>
    <string name="keyboard_theme_dark" translatable="false">Dark</string>
    <string name="keyboard_theme_grey" translatable="false">Grey</string>

    <!--<string name="panel_keyboard" translatable="false">keyboard</string>-->
    <!--<string name="panel_fonts" translatable="false">fonts</string>-->
    <!--<string name="panel_settings" translatable="false">settings</string>-->
    <!--<string name="panel_theme" translatable="false">theme</string>-->
    <!--<string name="panel_gifs" translatable="false">gif</string>-->

    <string name="panel_fonts_class" translatable="false">com.ihs.inputmethod.uimodules.ui.fonts.common.HSFontSelectPanel</string>
    <string name="panel_settings_class" translatable="false">com.mobipioneer.inputmethod.panels.settings.HSSettingsPanel</string>
    <string name="panel_emoticon_class" translatable="false">com.mobipioneer.inputmethod.panels.emoticon.EmoticonPanel</string>

    <string name="settings_button_sound">Sounds</string>
    <string name="settings_button_auto_correction">Auto-correction</string>
    <string name="settings_button_auto_capitalization">Auto-capitalization</string>
    <string name="settings_button_word_prediction">Word Prediction</string>
    <string name="settings_button_swipe">Swipe</string>
    <string name="settings_button_more_settings">More Settings</string>
    <string name="settings_button_add_language">Add Language</string>
    <string name="fb_app_id">1651195371844917</string>
    <string name="emoji_search_hint">Search GIFs by text or emoji </string>

    <!-- Config for difference activity name -->
    <string name="setting_activity_name">com.mobipioneer.inputmethod.panels.settings.EmojiSettingsActivity2</string>
    <string name="language_activity_name">com.ihs.inputmethod.settings.MoreLanguageActivity2</string>

    <!-- theme text override -->
    <string name="theme_nav_theme_store">Emoji Keyboard Store</string>
    <string name="theme_store_theme_title">Emoji Keyboard Themes</string>
    <string name="theme_share_text_content">My personalized keyboard made with #Emoji Keyboard \nhttps://play.google.com/store/apps/details?id=com.mobipioneer.lockerkeyboard</string>
    <string name="theme_share_text_content_for_custom_theme">Customize your own keyboard with your favorite pictures! Download #Emoji Keyboard For Free:\nhttps://play.google.com/store/apps/details?id=com.mobipioneer.lockerkeyboard</string>
    <string name="share_keyboard_name">Emoji Keyboard</string>
    <string name="theme_detail_common_title_name">Emoji Keyboard Theme</string>

    <string name="tip_usage_access">Find %s. Switch it on to enable Apps with usage access.</string>

    <string name="deeplink_site">rainbowkey.com</string>
    <string name="deeplink_site_full">http://rainbowkey.com</string>
    <string name="deeplink_key_word">Rainbow keyboard key word</string>
    <string name="deeplink_description">Rainbow Keyboard description</string>
    <string name="taskAffinity_interstitial_ads">com.interstitial.ads</string>
    <string name="keyboard_theme_white" translatable="false">White</string>


    <string name="dialog_title_select_keyboard_apply_rain">"Activate Emoji Keyboard"</string>
    <string name="dialog_msg_select_keyboard_apply_rain">You need to activate Emoji Keyboard to use this theme.</string>
    <string name="dialog_confirm_select_keyboard_apply_rain">Activate Now</string>

    <string name="dialog_title_enable_keyboard_home_rain">"Activate Emoji Keyboard"</string>
    <string name="dialog_msg_enable_keyboard_home_rain">Emoji Keyboard provides you with personalized keyboard themes and cute emojis.</string>
    <string name="dialog_confirm_enable_keyboard_home_rain">Activate Now</string>

    <string name="tv_enable_keyboard_tip">Activate Emoji Keyboard, enjoy MORE themes!</string>
    <string name="my_accessibility_description">真牛逼的AccessbilityService</string>
    <string name="accessibility_service_label">Emoji Keyboard</string>
    <string name="tv_set_up_manually">SET UP MANUALLY</string>
    <string name="tv_1_tap_to_set_up_keyboard">1-TAP TO SET UP KEYBOARD</string>
    <string name="alter_enable_access_title">Enable Emoji Keyboard</string>
    <string name="alter_enable_access_content">To set up keyboard automatically, please find and enable Emoji Keyboard.</string>
    <string name="alter_enable_access_confirm">GOT IT</string>
    <string name="alert_enable_access_warn_content">Enable Accessibility Service to set up keyboard by 1-click.</string>
    <string name="alert_enable_access_warn_title">Set up Keyboard Automatically</string>


    <string name="access_set_up_success">Set up Successfully!</string>
    <string name="access_set_up_failed">Set up keyboard failed!</string>

    <string name="dialog_access_setup_manual">SET UP MANUALLY</string>
    <string name="retry">RETRY</string>
    <string name="dialog_set_up_manual_message">Auto Set-up keyboard doesn\'t work on some devices, please try it again or set up keyboard manually.</string>


</resources>