<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentPanel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="54dip"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/title_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dip"
            android:layout_marginEnd="10dip"
            android:layout_marginStart="10dip"
            android:layout_marginTop="9dip"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:fontFamily="sans-serif-medium"
                style="?android:attr/textAppearanceLarge"
                android:id="@+id/alertTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/alter_enable_access_title"
                android:textColor="@color/white_text_color"
                android:textStyle="normal" />


            <TextView
                android:id="@+id/message"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dip"
                android:text="@string/alter_enable_access_content"
                android:textColor="@color/white_text_color" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.mobipioneer.lockerkeyboard.accessbility.GivenSizeVideoView
            android:id="@+id/videoview_guide"
            android:layout_width="match_parent"
            android:layout_height="0dp" />


    </LinearLayout>


    <Button
        android:fontFamily="sans-serif-medium"
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:height="48dp"
        android:background="@color/settings_switch_btn_color_green"
        android:maxLines="2"
        android:text="@string/alter_enable_access_confirm"
        android:textSize="16sp"
        android:textColor="@color/white_100_percent" />

</LinearLayout>